Refactor entity models, bug fixes and minor refactorings